# freethreading_python

./: .gitignore  README.md  perfects.py  perfects_driver-py313-fed40.out  perfects_driver-py314a1-fed41.out  perfects_driver-py314a3-fed41.out  perfects_driver.out  perfects_driver.sh  pyproject.toml
.devcontainer/: devcontainer.json  vsc-install-python-pdm.sh  vsc-install-python-uv.sh  vsc-install-uv.sh
