[project]
name = "freethreading_python"
version = "0.1.0"
description = "Experiments on Performance of NoGIL Compile-time Option of python3.13t"
authors = [
    {name = "Kevin McWhirter", email = "klmcw@yahoo.com"},
]
dependencies = []
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}

[tool.uv]
managed = true
package = false

[tool.autopep8]
max-doc-length = 140
max_line_length = 140
